[metadata]
description-file = README.rst
name = libnfldap
version = 1.0.7
author = Julien Vehent
author_email = jvehent@mozilla.com
url = https://github.com/mozilla/libnfldap
keywords = libnfldap, client, library
license = MPL
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)

[options]
package_dir=
    =src
packages=libnfldap

[options.packages.find]
where=src

[bdist_rpm]
requires = python3-ldap
release = {?dist}
